define structure layout pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<div style="font-size: 20px;color: aquamarine;font-weight: 700;">hello word</div>
+<div class="wrapper">
+  <app-navbar></app-navbar>
+  <app-container></app-container>
+</div>
