update template site web

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,28 @@
-<div style="width: 100%;height: 56px;background-color: red">Footer</div>
+<div class="footer-wrapper">
+  <div class="footer-title">
+    <span class="container title">Thuê xe từ Đà nẵng đến Hội An hoặc ngược lại giá rẻ.
+</span>
+    <span class="container desc">Đón tại sân bay, Ga hoặc trung tâm thành phố Đà Nẵng đi Hội An, đến các điểm tham quan Du lịch như: Ngũ Hành Sơn, Bà nà hills Đà Nẵng, Vinpearl Nam Hội An…</span>
+  </div>
+  <div class="footer-info">
+    <div class="container row">
+      <div class="info-value col-6">
+        <span class="name">B&M Travel</span>
+        <span style="font-size: 20px;font-weight: 200;margin-top: 10px;margin-bottom: 5px;">Thuê Xe Riêng Hội An, Thuê Xe Giá Rẻ – Chất Lượng Cao</span>
+        <span style="margin-bottom: 5px;"><i class="fa-solid fa-map-location-dot"></i> Hải Thượng Lãn Ông, Hội An, Quảng Nam</span>
+        <span style="margin-bottom: 5px;"><i class="fa-solid fa-phone-volume"></i> 0935850076</span>
+        <span style="margin-bottom: 5px;"><i class="fa-solid fa-earth-asia"></i> www.xehoiandanang.vn</span>
+      </div>
+      <div class="social-info col-6">
+         <div>
+           <a class="btn-footer" href="tel:0935850076">
+             <span class="icon fa-solid fa-phone"></span>
+             <span class="phone-number">0935 850 076</span>
+           </a>
+         </div>
+        <div class=""></div>
+        <div class=""></div>
+      </div>
+    </div>
+  </div>
+</div>
