--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,14 +3,14 @@
     <img src="./content/images/logo.jpeg" alt="">
   </div>
   <div class="navbar-main">
-    <div class="">
+    <div class="navbar-item">
       <span class="fa-solid fa-house"></span>
       <span>Home</span>
     </div>
-    <div class="">Thuê xe du lịch</div>
-    <div class="">Bảng giá thuê xe</div>
-    <div class="">Giới thiệu</div>
-    <div class="">Đặt xe</div>
+    <div class="navbar-item">Thuê xe du lịch</div>
+    <div class="navbar-item">Bảng giá thuê xe</div>
+    <div class="navbar-item">Giới thiệu</div>
+    <div class="navbar-item">Đặt xe</div>
   </div>
-  <div class="navbar-left">left</div>
+  <div class="navbar-left"></div>
 </div>
