update router & template html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
   <app-navbar></app-navbar>
-  <app-container></app-container>
+  <!--  <app-container></app-container>-->
+  <router-outlet></router-outlet>
 </div>
