--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,17 @@
 <div class="navbar">
   <div class="logo">
-    <img src="./content/images/logo.jpeg" alt="">
+    <img src="./content/images/logo.jpeg" alt="" />
   </div>
   <div class="navbar-main">
-    <div class="navbar-item">
+    <div class="navbar-item" routerLink="">
       <span class="fa-solid fa-house"></span>
       <span>Home</span>
     </div>
-    <div class="navbar-item">Thuê xe du lịch</div>
-    <div class="navbar-item">Bảng giá thuê xe</div>
-    <div class="navbar-item">Giới thiệu</div>
-    <div class="navbar-item">Đặt xe</div>
+    <div class="navbar-item" routerLink="bang-gia-thue-xe">
+      Bảng giá thuê xe
+    </div>
+    <div class="navbar-item" routerLink="gioi-thieu">Giới thiệu</div>
+    <div class="navbar-item" routerLink="dat-xe">Đặt xe</div>
   </div>
   <div class="navbar-left"></div>
 </div>
