--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,28 +1,88 @@
 <div class="footer-wrapper">
   <div class="footer-title">
-    <span class="container title">Thuê xe từ Đà nẵng đến Hội An hoặc ngược lại giá rẻ.
-</span>
-    <span class="container desc">Đón tại sân bay, Ga hoặc trung tâm thành phố Đà Nẵng đi Hội An, đến các điểm tham quan Du lịch như: Ngũ Hành Sơn, Bà nà hills Đà Nẵng, Vinpearl Nam Hội An…</span>
+    <div class="container title-wrapper">
+      <div class="title-left">
+        <span class="title"
+          >Thuê xe từ Đà nẵng đến Hội An hoặc ngược lại giá rẻ.
+        </span>
+        <span class="desc"
+          >Đón tại sân bay, Ga hoặc trung tâm thành phố Đà Nẵng đi Hội An, đến
+          các điểm tham quan Du lịch như: Ngũ Hành Sơn, Bà nà hills Đà Nẵng,
+          Vinpearl Nam Hội An…</span
+        >
+      </div>
+      <div class="title-right">
+        <button>
+          ư
+          <i class="fa-regular fa-clock"></i>
+          ĐẶT XE TRỰC TUYẾN
+        </button>
+      </div>
+    </div>
   </div>
   <div class="footer-info">
     <div class="container row">
       <div class="info-value col-6">
         <span class="name">B&M Travel</span>
-        <span style="font-size: 20px;font-weight: 200;margin-top: 10px;margin-bottom: 5px;">Thuê Xe Riêng Hội An, Thuê Xe Giá Rẻ – Chất Lượng Cao</span>
-        <span style="margin-bottom: 5px;"><i class="fa-solid fa-map-location-dot"></i> Hải Thượng Lãn Ông, Hội An, Quảng Nam</span>
-        <span style="margin-bottom: 5px;"><i class="fa-solid fa-phone-volume"></i> 0935850076</span>
-        <span style="margin-bottom: 5px;"><i class="fa-solid fa-earth-asia"></i> www.xehoiandanang.vn</span>
+        <span
+          style="
+            font-size: 20px;
+            font-weight: 200;
+            margin-top: 10px;
+            margin-bottom: 5px;
+          "
+          >Thuê Xe Riêng Hội An, Thuê Xe Giá Rẻ – Chất Lượng Cao</span
+        >
+        <span style="margin-bottom: 5px"
+          ><i class="fa-solid fa-map-location-dot"></i> Hải Thượng Lãn Ông, Hội
+          An, Quảng Nam</span
+        >
+        <span style="margin-bottom: 5px"
+          ><i class="fa-solid fa-phone-volume"></i> 0935850076</span
+        >
+        <span style="margin-bottom: 5px"
+          ><i class="fa-solid fa-earth-asia"></i> www.xehoiandanang.vn</span
+        >
       </div>
       <div class="social-info col-6">
-         <div>
-           <a class="btn-footer" href="tel:0935850076">
-             <span class="icon fa-solid fa-phone"></span>
-             <span class="phone-number">0935 850 076</span>
-           </a>
-         </div>
-        <div class=""></div>
-        <div class=""></div>
+        <div>
+          <a class="btn-footer" href="tel:0935850076">
+            <span class="icon fa-solid fa-phone"></span>
+            <span class="phone-number">0935 850 076</span>
+          </a>
+        </div>
+        <div class="note">
+          <span>Hotline/Zalo/Kakaotalk/Whatsapp:</span>
+          <span class="phone-number">0935 850 076</span>
+        </div>
+        <div class="">
+          <span>
+            <img
+              style="border-radius: 18px; margin-right: 10px"
+              src="./content/images/zalo.png"
+              alt=""
+            />
+          </span>
+          <span>
+            <img
+              style="border-radius: 18px; margin-right: 8px"
+              src="./content/images/kakao-talk.png"
+              alt=""
+            />
+          </span>
+          <span>
+            <img
+              src="./content/images/whatsapp.png"
+              width="80"
+              height="80"
+              alt=""
+            />
+          </span>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="copy-right">
+    <span class="container">Copyright 2023 © xedanangdihoiangiare.com</span>
   </div>
 </div>
