--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,20 +13,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    .title {
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 120%;
-      color: white;
-      margin-bottom: 12px;
-      text-align: center;
-    }
-    .desc {
-      font-weight: 500;
-      font-size: 18px;
-      line-height: 22px;
-      color: white;
-      text-align: center;
+    .title-wrapper {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .title-left {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        .title {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 120%;
+          color: white;
+          margin-bottom: 12px;
+          text-align: center;
+        }
+        .desc {
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 22px;
+          color: white;
+          text-align: center;
+        }
+      }
+      .title-right {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        //margin-left: 20px;
+        button {
+          padding: 10px;
+          border: 2px solid black;
+          border-radius: 20px;
+          color: black;
+          font-weight: 700;
+          font-size: 16px;
+        }
+      }
     }
   }
   .footer-info {
@@ -62,9 +86,28 @@
           font-size: 19px;
           font-weight: 700;
           color: #ffd43b;
-
+        }
+      }
+      .note {
+        display: flex;
+        flex-direction: column;
+        font-weight: 500;
+        font-size: 16px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        .phone-number {
+          margin-top: 10px;
         }
       }
     }
+  }
+  .copy-right {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+    background-color: #222222;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
