update router bang-gia-thue-xe

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -5,7 +5,10 @@
       <div class="desc-group">
         <span class="desc-item">Đưa đón và khứ hồi.</span>
         <span class="desc-item">Đặt lịch trước & thanh toán sau.</span>
-        <span class="desc-item">Giữ kế hoạch du lịch linh hoạt - đặt chỗ và không phải thanh toán ngày hôm nay.</span>
+        <span class="desc-item"
+          >Giữ kế hoạch du lịch linh hoạt - đặt chỗ và không phải thanh toán
+          ngày hôm nay.</span
+        >
       </div>
       <a class="btn-banner" href="tel:0935850076">
         <span class="icon fa-solid fa-phone"></span>
@@ -25,9 +28,10 @@
         <span class="value">www.xehoiandanang.vn</span>
       </div>
       <div class="contact">
-      <span class="text">
-        Xe chất lượng cao – Đón và trả tận nơi – Wifi – Hỗ trợ 24/7 từ bộ phận chăm sóc khách hàng của chúng tôi
-      </span>
+        <span class="text">
+          Xe chất lượng cao – Đón và trả tận nơi – Wifi – Hỗ trợ 24/7 từ bộ phận
+          chăm sóc khách hàng của chúng tôi
+        </span>
         <div class="info">
           <div class="text">Gọi để đặt xe:</div>
           <a class="btn-phone" href="tel:0935850076">
@@ -46,7 +50,10 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">HỘI AN</span>
           </div>
-          <div class="description">ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI HỘI AN HOẶC NGƯỢC LẠI.</div>
+          <div class="description">
+            ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI HỘI AN HOẶC
+            NGƯỢC LẠI.
+          </div>
         </div>
         <div class="table">
           <table>
@@ -86,7 +93,10 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">VINPEARL NAM HỘI AN</span>
           </div>
-          <div class="description">ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI BÀ NÀ HILLS. HOẶC NGƯỢC LẠI.</div>
+          <div class="description">
+            ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI BÀ NÀ HILLS.
+            HOẶC NGƯỢC LẠI.
+          </div>
         </div>
         <div class="table">
           <table>
@@ -128,17 +138,24 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">HUẾ</span>
           </div>
-          <div class="description">ĐÓN KHÁCH TẠI KHÁCH SẠN TỪ HỘI AN ĐI TP HUẾ. HOẶC NGƯỢC LẠI .</div>
+          <div class="description">
+            ĐÓN KHÁCH TẠI KHÁCH SẠN TỪ HỘI AN ĐI TP HUẾ. HOẶC NGƯỢC LẠI .
+          </div>
         </div>
         <div class="table table-custom">
           <table>
             <tr>
-              <th ></th>
+              <th></th>
               <th></th>
               <th></th>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 4 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 4 chỗ
+              </td>
               <td>1 chiều</td>
               <td>1.500.000 vnđ</td>
             </tr>
@@ -147,16 +164,30 @@
               <td>2.000.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle;background-color: #f0f3f5;">Xe 7 chỗ</td>
-              <td style="background-color: #f0f3f5;">1 chiều</td>
-              <td style="background-color: #f0f3f5;">1.800.000 vnđ</td>
+              <td
+                rowspan="2"
+                style="
+                  text-align: center;
+                  vertical-align: middle;
+                  background-color: #f0f3f5;
+                "
+              >
+                Xe 7 chỗ
+              </td>
+              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">1.800.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5;">2 chiều</td>
-              <td style="background-color: #f0f3f5;">2.400.000 vnđ</td>
+              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">2.400.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 16 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 16 chỗ
+              </td>
               <td>1 chiều</td>
               <td>2.000.000 vnđ</td>
             </tr>
@@ -180,17 +211,25 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">HUẾ</span>
           </div>
-          <div class="description">ĐÓN TẠI SÂN BAY , GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI TP HUẾ. HOẶC NGƯỢC LẠI.</div>
+          <div class="description">
+            ĐÓN TẠI SÂN BAY , GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI TP HUẾ. HOẶC
+            NGƯỢC LẠI.
+          </div>
         </div>
         <div class="table table-custom">
           <table>
             <tr>
-              <th ></th>
+              <th></th>
               <th></th>
               <th></th>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 4 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 4 chỗ
+              </td>
               <td>1 chiều</td>
               <td>1.400.000 vnđ</td>
             </tr>
@@ -199,16 +238,30 @@
               <td>1.900.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle;background-color: #f0f3f5;">Xe 7 chỗ</td>
-              <td style="background-color: #f0f3f5;">1 chiều</td>
-              <td style="background-color: #f0f3f5;">1.700.000 vnđ</td>
+              <td
+                rowspan="2"
+                style="
+                  text-align: center;
+                  vertical-align: middle;
+                  background-color: #f0f3f5;
+                "
+              >
+                Xe 7 chỗ
+              </td>
+              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">1.700.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5;">2 chiều</td>
-              <td style="background-color: #f0f3f5;">2.200.000 vnđ</td>
+              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">2.200.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 16 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 16 chỗ
+              </td>
               <td>1 chiều</td>
               <td>2.000.000 vnđ</td>
             </tr>
@@ -234,17 +287,24 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">BÀ NÀ HILLS</span>
           </div>
-          <div class="description">ĐÓN TẠI KHÁCH SẠN, TỪ HỘI AN ĐI BÀ NÀ HILL. HOẶC NGƯỢC LẠI.</div>
+          <div class="description">
+            ĐÓN TẠI KHÁCH SẠN, TỪ HỘI AN ĐI BÀ NÀ HILL. HOẶC NGƯỢC LẠI.
+          </div>
         </div>
         <div class="table table-custom">
           <table>
             <tr>
-              <th ></th>
+              <th></th>
               <th></th>
               <th></th>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 4 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 4 chỗ
+              </td>
               <td>1 chiều</td>
               <td>600.000 vnđ</td>
             </tr>
@@ -253,16 +313,30 @@
               <td>1.050.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle;background-color: #f0f3f5;">Xe 7 chỗ</td>
-              <td style="background-color: #f0f3f5;">1 chiều</td>
-              <td style="background-color: #f0f3f5;">700.000 vnđ</td>
+              <td
+                rowspan="2"
+                style="
+                  text-align: center;
+                  vertical-align: middle;
+                  background-color: #f0f3f5;
+                "
+              >
+                Xe 7 chỗ
+              </td>
+              <td style="background-color: #f0f3f5">1 chiều</td>
+              <td style="background-color: #f0f3f5">700.000 vnđ</td>
             </tr>
             <tr>
-              <td style="background-color: #f0f3f5;">2 chiều</td>
-              <td style="background-color: #f0f3f5;">1.250.000 vnđ</td>
+              <td style="background-color: #f0f3f5">2 chiều</td>
+              <td style="background-color: #f0f3f5">1.250.000 vnđ</td>
             </tr>
             <tr>
-              <td rowspan="2" style="text-align: center;vertical-align: middle">Xe 16 chỗ</td>
+              <td
+                rowspan="2"
+                style="text-align: center; vertical-align: middle"
+              >
+                Xe 16 chỗ
+              </td>
               <td>1 chiều</td>
               <td>900.000 vnđ</td>
             </tr>
@@ -286,7 +360,9 @@
             <span class="icon fa-solid fa-right-left"></span>
             <span class="text">VINPEARL NAM HỘI AN</span>
           </div>
-          <div class="description">ĐÓN TẠI KHÁCH SẠN TỪ HỘI AN ĐI VINPEARL NAM HỘI AN. HOẶC NGƯỢC LẠI.</div>
+          <div class="description">
+            ĐÓN TẠI KHÁCH SẠN TỪ HỘI AN ĐI VINPEARL NAM HỘI AN. HOẶC NGƯỢC LẠI.
+          </div>
         </div>
         <div class="table">
           <table>
@@ -320,7 +396,5 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
-<app-footer></app-footer>
