--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-navbar></app-navbar>
   <!--  <app-container></app-container>-->
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
