--- a/src/app/bang-gia-thue-xe/bang-gia-thue-xe.component.html
+++ b/src/app/bang-gia-thue-xe/bang-gia-thue-xe.component.html
@@ -1,1 +1,358 @@
-<div style="font-size: 50px">hahah</div>
+<div class="container">
+  <div class="desc">
+    <div class="title">
+      <span class="text">Dịch vụ thuê xe Đà Nẵng - Hội An giá rẻ</span>
+      <span class="value">www.xehoiandanang.vn</span>
+    </div>
+    <div class="contact">
+      <span class="text">
+        Xe chất lượng cao – Đón và trả tận nơi – Wifi – Hỗ trợ 24/7 từ bộ phận
+        chăm sóc khách hàng của chúng tôi
+      </span>
+      <div class="info">
+        <div class="text">Gọi để đặt xe:</div>
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+        <button style="display: none">Đặt xe online</button>
+      </div>
+    </div>
+  </div>
+  <div class="price-list row">
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE ĐÀ NẴNG</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">HỘI AN</span>
+        </div>
+        <div class="description">
+          ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI HỘI AN HOẶC NGƯỢC
+          LẠI.
+        </div>
+      </div>
+      <div class="table">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td>Xe 4 chỗ</td>
+            <td>1 chiều</td>
+            <td>250.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 7 chỗ</td>
+            <td>1 chiều</td>
+            <td>350.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 16 chỗ</td>
+            <td>1 chiều</td>
+            <td>450.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE ĐÀ NẴNG</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">VINPEARL NAM HỘI AN</span>
+        </div>
+        <div class="description">
+          ĐÓN TẠI SÂN BAY, GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI BÀ NÀ HILLS. HOẶC
+          NGƯỢC LẠI.
+        </div>
+      </div>
+      <div class="table">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td>Xe 4 chỗ</td>
+            <td>1 chiều</td>
+            <td>400.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 7 chỗ</td>
+            <td>1 chiều</td>
+            <td>450.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 16 chỗ</td>
+            <td>1 chiều</td>
+            <td>650.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="price-list row">
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE HỘI AN</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">HUẾ</span>
+        </div>
+        <div class="description">
+          ĐÓN KHÁCH TẠI KHÁCH SẠN TỪ HỘI AN ĐI TP HUẾ. HOẶC NGƯỢC LẠI .
+        </div>
+      </div>
+      <div class="table table-custom">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 4 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>1.500.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>2.000.000 vnđ</td>
+          </tr>
+          <tr>
+            <td
+              rowspan="2"
+              style="
+                text-align: center;
+                vertical-align: middle;
+                background-color: #f0f3f5;
+              "
+            >
+              Xe 7 chỗ
+            </td>
+            <td style="background-color: #f0f3f5">1 chiều</td>
+            <td style="background-color: #f0f3f5">1.800.000 vnđ</td>
+          </tr>
+          <tr>
+            <td style="background-color: #f0f3f5">2 chiều</td>
+            <td style="background-color: #f0f3f5">2.400.000 vnđ</td>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 16 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>2.000.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>3.000.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE ĐÀ NẴNG</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">HUẾ</span>
+        </div>
+        <div class="description">
+          ĐÓN TẠI SÂN BAY , GA TÀU LỬA, KHÁCH SẠN TỪ ĐÀ NẴNG ĐI TP HUẾ. HOẶC
+          NGƯỢC LẠI.
+        </div>
+      </div>
+      <div class="table table-custom">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 4 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>1.400.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>1.900.000 vnđ</td>
+          </tr>
+          <tr>
+            <td
+              rowspan="2"
+              style="
+                text-align: center;
+                vertical-align: middle;
+                background-color: #f0f3f5;
+              "
+            >
+              Xe 7 chỗ
+            </td>
+            <td style="background-color: #f0f3f5">1 chiều</td>
+            <td style="background-color: #f0f3f5">1.700.000 vnđ</td>
+          </tr>
+          <tr>
+            <td style="background-color: #f0f3f5">2 chiều</td>
+            <td style="background-color: #f0f3f5">2.200.000 vnđ</td>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 16 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>2.000.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>2.800.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="price-list row">
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE HỘI AN</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">BÀ NÀ HILLS</span>
+        </div>
+        <div class="description">
+          ĐÓN TẠI KHÁCH SẠN, TỪ HỘI AN ĐI BÀ NÀ HILL. HOẶC NGƯỢC LẠI.
+        </div>
+      </div>
+      <div class="table table-custom">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 4 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>600.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>1.050.000 vnđ</td>
+          </tr>
+          <tr>
+            <td
+              rowspan="2"
+              style="
+                text-align: center;
+                vertical-align: middle;
+                background-color: #f0f3f5;
+              "
+            >
+              Xe 7 chỗ
+            </td>
+            <td style="background-color: #f0f3f5">1 chiều</td>
+            <td style="background-color: #f0f3f5">700.000 vnđ</td>
+          </tr>
+          <tr>
+            <td style="background-color: #f0f3f5">2 chiều</td>
+            <td style="background-color: #f0f3f5">1.250.000 vnđ</td>
+          </tr>
+          <tr>
+            <td rowspan="2" style="text-align: center; vertical-align: middle">
+              Xe 16 chỗ
+            </td>
+            <td>1 chiều</td>
+            <td>900.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>2 chiều</td>
+            <td>1.600.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+    <div class="price-item col">
+      <div class="header">
+        <div class="destination">
+          <span class="text">XE HỘI AN</span>
+          <span class="icon fa-solid fa-right-left"></span>
+          <span class="text">VINPEARL NAM HỘI AN</span>
+        </div>
+        <div class="description">
+          ĐÓN TẠI KHÁCH SẠN TỪ HỘI AN ĐI VINPEARL NAM HỘI AN. HOẶC NGƯỢC LẠI.
+        </div>
+      </div>
+      <div class="table">
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td>Xe 4 chỗ</td>
+            <td>1 chiều</td>
+            <td>220.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 7 chỗ</td>
+            <td>1 chiều</td>
+            <td>270.000 vnđ</td>
+          </tr>
+          <tr>
+            <td>Xe 16 chỗ</td>
+            <td>1 chiều</td>
+            <td>350.000 vnđ</td>
+          </tr>
+        </table>
+      </div>
+      <div class="action">
+        <a class="btn-phone" href="tel:0935850076">
+          <span class="icon fa-solid fa-phone"></span>
+          <span class="phone-number">0935850076</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
