update router gioi-thieu

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar container">
   <div class="logo">
     <img src="./content/images/logo.jpeg" alt="" />
   </div>
