--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,7 +8,7 @@
 }
 .footer-wrapper {
   .footer-title {
-    background-color: rgb(20, 110, 190);
+    background-color: #28a745;
     padding: 36px;
     display: flex;
     flex-direction: column;
