--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,13 +5,13 @@
   <div class="navbar-main">
     <div class="navbar-item" routerLink="">
       <span class="fa-solid fa-house"></span>
-      <span>Home</span>
+      <span>HOME</span>
     </div>
     <div class="navbar-item" routerLink="bang-gia-thue-xe">
-      Bảng giá thuê xe
+      BẢNG GIÁ THUÊ XE
     </div>
-    <div class="navbar-item" routerLink="gioi-thieu">Giới thiệu</div>
-    <div class="navbar-item" routerLink="dat-xe">Đặt xe</div>
+    <div class="navbar-item" routerLink="gioi-thieu">GIỚI THIỆU</div>
+    <div class="navbar-item" routerLink="dat-xe">ĐẶT XE</div>
   </div>
   <div class="navbar-left"></div>
 </div>
