--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -82,6 +82,6 @@
     </div>
   </div>
   <div class="copy-right">
-    <span class="container">Copyright 2023 © xedanangdihoiangiare.com</span>
+    <span class="container">Copyright 2023 © www.xehoiandanang.vn</span>
   </div>
 </div>
