style navbar mobile

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,8 +11,8 @@
           Vinpearl Nam Hội An…</span
         >
       </div>
-      <div class="title-right">
-        <button>
+      <div class="title-right" style="cursor: pointer">
+        <button routerLink="/dat-xe">
           <i class="fa-regular fa-clock"></i>
           ĐẶT XE TRỰC TUYẾN
         </button>
